--- a/_posts/blog/2018-08-01-test-blog.md
+++ b/_posts/blog/2018-08-01-test-blog.md
@@ -16,3 +16,5 @@ Looking for the syllabus? Follow these links for the [schedule](../../schedule) 
 Want to find out about office hours and faculty contact information? Check out the [About page](../../about). 
 
 In the future, this page will feature blog posts written by students.
+
+Adding some more text.
